--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 </a>
             </div>
             <div class="notifications">
-                <a href="" class="notification">
+                <a class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
                     <div class="content-notification">
                         <p class="title-notification">Don't Start Now</p>
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="notification">
+                <a class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
                     <div class="content-notification">
                         <p class="title-notification">Don't Start Now</p>
@@ -266,7 +266,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="notification">
+                <a class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
                     <div class="content-notification">
                         <p class="title-notification">Don't Start Now</p>
@@ -284,7 +284,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="notification">
+                <a class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
                     <div class="content-notification">
                         <p class="title-notification">Don't Start Now</p>
@@ -302,7 +302,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="notification">
+                <a class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
                     <div class="content-notification">
                         <p class="title-notification">Don't Start Now</p>
@@ -320,7 +320,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="notification">
+                <a class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
                     <div class="content-notification">
                         <p class="title-notification">Don't Start Now</p>
@@ -338,7 +338,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="notification">
+                <a class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
                     <div class="content-notification">
                         <p class="title-notification">Don't Start Now</p>
@@ -356,7 +356,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="notification">
+                <a class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
                     <div class="content-notification">
                         <p class="title-notification">Don't Start Now</p>
@@ -374,7 +374,7 @@
                         </div>
                     </div>
                 </a>
-                <a href="" class="notification">
+                <a class="notification">
                     <img src="images/image-profile.png" alt="" class="image-profile">
                     <div class="content-notification">
                         <p class="title-notification">Don't Start Now</p>
@@ -463,7 +463,6 @@
             </div>
         </div>
 
-
         <main class="main-content">
             <div class="video-content">
                 <div class="container-content">
@@ -472,15 +471,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -528,15 +523,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -584,15 +575,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -640,15 +627,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -696,15 +679,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -752,15 +731,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -808,15 +783,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -864,15 +835,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -920,15 +887,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -976,15 +939,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -1032,15 +991,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -1088,15 +1043,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -1144,15 +1095,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -1200,15 +1147,11 @@
                         <p class="duration">1:01:14</p>
                         <div class="ver-mas-tarde">
                             <p class="ver-mas-tarde-text">ver más tarde</p>
-                            <div class="icon-ver-mas-tarde-container">
-                                <i class="icon-ver-mas-tarde icon-clock2"></i>
-                            </div>
+                            <i class="icon-ver-mas-tarde icon-clock2"></i>
                         </div>
                         <div class="agregar-lista">
                             <p class="agregar-lista-text">agregar a la lista</p>
-                            <div class="icon-agregar-lista-container">
-                                <i class="icon-agregar-lista icon-playlist_play"></i>
-                            </div>
+                            <i class="icon-agregar-lista icon-playlist_play"></i>
                         </div>
                         <div class="menu-more-options-content">
                             <div class="interes">
@@ -1309,7 +1252,6 @@
             </div>    
         </main>
 
-        <script src="js/script.js"></script>
-        <script src="js/script2.js"></script>
+        <script src="js/script.js"></script>}
     </body>
 </html>
